move some files around

--- a/ui_lovelace_minimalist/dashboard/views/rooms/attic.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/attic.yaml
@@ -2,7 +2,7 @@ title: "Attic"
 path: "attic"
 cards:
   - type: custom:decluttering-card
-    template: room header
+    template: room_header
     variables:
       - sensor_prefix: attic
       - room_name: Attic
