--- a/ui_lovelace_minimalist/dashboard/home-dashboard.yaml
+++ b/ui_lovelace_minimalist/dashboard/home-dashboard.yaml
@@ -5,4 +5,4 @@ title: "The Matrix"
 background: "var(--background-image)"
 views: !include_dir_list views
 
-decluttering_templates: !include_dir_merge_named templates
+decluttering_templates: !include_dir_merge_named ../card_declutter
