--- a/automations/devices/vacuum-issue.yaml
+++ b/automations/devices/vacuum-issue.yaml
@@ -10,23 +10,17 @@ trigger:
   entity_id: group.robot_vacuums_status
   to: "on"
 
+condition:
+  - condition: template
+    value_template: '{{ not is_state_attr("vacuum.rolo", "status", "Dust bin missing")  }}'
+
 action:
-  - service: notify.persistent_notification
+  - service: notify.family
     data:
       message: >
         Vacuum has an issue!
         
-
-        Rolo:       {{ state_attr("vacuum.rolo", "status") }}
-
-        Strong Boi: {{ state_attr("vacuum.e0000693817603917196", "error") }}
-      title: '🤖 Vacuum problem!'
-  - service: notify.mobile_app_poat_s_iphone_14_pro_max
-    data:
-      message: >
-        Vacuum has an issue!
-
-
+        
         Rolo:       {{ state_attr("vacuum.rolo", "status") }}
         
         Strong Boi: {{ state_attr("vacuum.e0000693817603917196", "error") }}
