--- a/automations/utilities/dryer_end.yaml
+++ b/automations/utilities/dryer_end.yaml
@@ -20,7 +20,7 @@ action:
 - service: input_boolean.turn_off
   entity_id: input_boolean.dryer_on
 
-- service: notify.persistent_notification
+- service: notify.family
   data:
     message: Empty me and the lint thingy!
     title: Dryer done!
