--- a/automations/utilities/washing_machine_end.yaml
+++ b/automations/utilities/washing_machine_end.yaml
@@ -20,7 +20,7 @@ action:
 - service: input_boolean.turn_off
   entity_id: input_boolean.washing_machine_on
 
-- service: notify.persistent_notification
+- service: notify.family
   data:
     message: Time to load the dryer...
     title: Washer done!
