--- a/ui_lovelace_minimalist/dashboard/views/rooms/office.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/rooms/office.yaml
@@ -24,12 +24,15 @@ cards:
         entity: switch.office_switch_switch_1
 
   - type: "custom:button-card"
-    template: card_cover
+    template:
+      - card_cover
+      - battery_info
     entity: cover.office_blinds
     variables:
       ulm_card_cover_enable_controls: true
       ulm_card_cover_enable_slider: true
       ulm_card_cover_color: green
+      ulm_battery_entity: sensor.office_blinds_battery
 
   - type: media-control
     entity: media_player.fire_tv_192_168_68_115
