--- a/ui_lovelace_minimalist/dashboard/views/lab.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/lab.yaml
@@ -6,82 +6,114 @@ cards:
     variables:
       ulm_chip_back_path: home
 
-  - type: "custom:button-card"
-    template: card_title
-    name: Lab
+  - type: horizontal-stack
+    cards:
+      - type: "custom:button-card"
+        template: card_title
+        name: Lab
+
+      - type: "custom:button-card"
+        color_type: blank-card
+
+      - type: 'custom:button-card'
+        entity: binary_sensor.pi_hole_status
+        hold_action:
+          action: call-service
+          service: pi_hole.disable
+          data:
+            duration: "00:05:00"
+          target:
+            device_id: e03d2a8d6db4afd53059dc33a584b7e2
+        state:
+          - value: 'on'
+            color: green
+            icon: mdi:shield-check
+          - operator: default
+            color: red
+            icon: mdi:alert
+            styles:
+              card:
+                - animation: blink 2s ease infinite
 
   #################
   # INFO CHIPS
   #################
-  - type: horizontal-stack
-    cards:
-      - type: "custom:button-card"
-        template: chip_icon_label
-        label: pi-hole
-        icon: mdi:pi-hole
-        styles:
-          icon:
-            - color: >
-                [[[ if (states["binary_sensor.poat_hole_local"].state == "on")
-                  return "var(--green-color)" ;
-                  else return "var(--red-color)"; ]]]
-      - type: "custom:button-card"
-        template: chip_icon_label
-        label: share
-        icon: mdi:folder-network-outline
-        styles:
-          icon:
-            - color: >
-                [[[ if (states["binary_sensor.poat_share_local"].state == "on")
-                  return "var(--green-color)" ;
-                  else return "var(--red-color)"; ]]]
-      - type: "custom:button-card"
-        template: chip_icon_label
-        label: seedbox
-        icon: mdi:seed
-        entity: sensor.rpi_poat_seedbox_rpi_monitor_poat_seedbox
-        styles:
-          icon:
-            - color: >
-                [[[ if (states["binary_sensor.192_168_68_131"].state == "on")
-                  return "var(--green-color)" ;
-                  else return "var(--red-color)"; ]]]
-      - type: "custom:button-card"
-        template: chip_icon_label
-        label: plex
-        icon: mdi:plex
-        entity: sensor.rpi_poat_plex_rpi_monitor_poat_plex
-        styles:
-          icon:
-            - color: >
-                [[[ if (states["binary_sensor.poat_plex_local"].state == "on")
-                  return "var(--green-color)" ;
-                  else return "var(--red-color)"; ]]]
-      - type: "custom:button-card"
-        template: chip_mdi_icon_only
-        variables:
-          ulm_chip_mdi_icon_only_entity: sensor.mfc_7860dw_status
-          ulm_chip_mdi_icon_only_icon: mdi:printer
-        styles:
-          icon:
-            - color: >
-                [[[ if (states["sensor.mfc_7860dw_status"].state == "unavailable")
-                  return "var(--red-color)" ;
-                  else return "var(--green-color)"; ]]]
-      - type: "custom:button-card"
-        template: chip_mdi_icon_only
-        variables:
-          ulm_chip_mdi_icon_only_entity: sensor.seedbox_vpn_on
-          ulm_chip_mdi_icon_only_icon: mdi:vpn
-        styles:
-          icon:
-            - color: >
-                [[[ if (states["sensor.seedbox_vpn_on"].state == "False")
-                      return "var(--red-color)";
-                    else if (states["sensor.seedbox_vpn_on"].state == "Offline")
-                      return "var(--amber-color)";
-                    else
-                      return "var(--green-color)"; ]]]
+  - type: custom:mod-card
+    style: 
+      hui-horizontal-stack-card$: |
+        #root { 
+          justify-content: center;
+        }
+    card:
+      type: horizontal-stack
+      cards:
+        - type: "custom:button-card"
+          template: chip_icon_label
+          label: pi-hole
+          icon: mdi:pi-hole
+          styles:
+            icon:
+              - color: >
+                  [[[ if (states["binary_sensor.poat_hole_local"].state == "on")
+                    return "var(--green-color)" ;
+                    else return "var(--red-color)"; ]]]
+        - type: "custom:button-card"
+          template: chip_icon_label
+          label: share
+          icon: mdi:folder-network-outline
+          styles:
+            icon:
+              - color: >
+                  [[[ if (states["binary_sensor.poat_share_local"].state == "on")
+                    return "var(--green-color)" ;
+                    else return "var(--red-color)"; ]]]
+        - type: "custom:button-card"
+          template: chip_icon_label
+          label: seedbox
+          icon: mdi:seed
+          entity: sensor.rpi_poat_seedbox_rpi_monitor_poat_seedbox
+          styles:
+            icon:
+              - color: >
+                  [[[ if (states["binary_sensor.192_168_68_131"].state == "on")
+                    return "var(--green-color)" ;
+                    else return "var(--red-color)"; ]]]
+        - type: "custom:button-card"
+          template: chip_icon_label
+          label: plex
+          icon: mdi:plex
+          entity: sensor.rpi_poat_plex_rpi_monitor_poat_plex
+          styles:
+            icon:
+              - color: >
+                  [[[ if (states["binary_sensor.poat_plex_local"].state == "on")
+                    return "var(--green-color)" ;
+                    else return "var(--red-color)"; ]]]
+        - type: "custom:button-card"
+          template: chip_mdi_icon_only
+          variables:
+            ulm_chip_mdi_icon_only_entity: sensor.mfc_7860dw_status
+            ulm_chip_mdi_icon_only_icon: mdi:printer
+          styles:
+            icon:
+              - color: >
+                  [[[ if (states["sensor.mfc_7860dw_status"].state == "unavailable")
+                    return "var(--red-color)" ;
+                    else return "var(--green-color)"; ]]]
+        - type: "custom:button-card"
+          template: chip_mdi_icon_only
+          variables:
+            ulm_chip_mdi_icon_only_entity: sensor.seedbox_vpn_on
+            ulm_chip_mdi_icon_only_icon: mdi:vpn
+          styles:
+            icon:
+              - color: >
+                  [[[ if (states["sensor.seedbox_vpn_on"].state == "False")
+                        return "var(--red-color)";
+                      else if (states["sensor.seedbox_vpn_on"].state == "Offline")
+                        return "var(--amber-color)";
+                      else
+                        return "var(--green-color)"; ]]]
 
   - type: horizontal-stack
     cards:
@@ -102,27 +134,9 @@ cards:
     template: card_title
     label: Raspberries - Control
 
-  - type: 'custom:button-card'
-    entity: binary_sensor.pi_hole_status
-    hold_action:
-      action: call-service
-      service: pi_hole.disable
-      data:
-        duration: "00:05:00"
-      target:
-        device_id: e03d2a8d6db4afd53059dc33a584b7e2
-    state:
-      - value: 'on'
-        color: green
-        icon: mdi:shield-check
-      - operator: default
-        color: red
-        icon: mdi:alert
-        styles:
-          card:
-            - animation: blink 2s ease infinite
-        
-
+  #################
+  # PI CONTROL
+  #################
   - type: entities
     entities:
       - entity: device_tracker.poat_hole
@@ -163,44 +177,54 @@ cards:
           - entity: button.rpi_poat_share_rpi_restart_service_poat_share_command
             icon: mdi:restore-alert
             name: restore
-      - entity: device_tracker.pi_seedbox
-        type: custom:multiple-entity-row
-        name: poat-seedbox
-        icon: mdi:seed
-        show_state: false
-        secondary_info:
-          attribute: ip
-        entities:
-          - entity: sensor.deluge_last_backup
-            name: backup
-          - entity: button.poat_seedbox_rpi_reboot_poat_seedbox_command
-            icon: mdi:restart
-            name: restart
-          - entity: button.poat_seedbox_rpi_shutdown_poat_seedbox_command
-            icon: mdi:power
-            name: shutdown
-          - entity: button.poat_seedbox_rpi_restart_service_poat_seedbox_command
-            icon: mdi:restore-alert
-            name: restore
-      - entity: device_tracker.pi_plex
-        type: custom:multiple-entity-row
-        name: poat-plex
-        icon: mdi:plex
-        show_state: false
-        secondary_info:
-          attribute: ip
-        entities:
-          - entity: sensor.plex_server_last_backup
-            name: backup
-          - entity: button.rpi_poat_plex_rpi_reboot_poat_plex_command
-            icon: mdi:restart
-            name: restart
-          - entity: button.rpi_poat_plex_rpi_shutdown_poat_plex_command
-            icon: mdi:power
-            name: shutdown
-          - entity: button.rpi_poat_plex_rpi_restart_service_poat_plex_command
-            icon: mdi:restore-alert
-            name: restore
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.192_168_68_131
+            state: "on"
+        row:
+          entity: device_tracker.pi_seedbox
+          type: custom:multiple-entity-row
+          name: poat-seedbox
+          icon: mdi:seed
+          show_state: false
+          secondary_info:
+            attribute: ip
+          entities:
+            - entity: sensor.deluge_last_backup
+              name: backup
+            - entity: button.poat_seedbox_rpi_reboot_poat_seedbox_command
+              icon: mdi:restart
+              name: restart
+            - entity: button.poat_seedbox_rpi_shutdown_poat_seedbox_command
+              icon: mdi:power
+              name: shutdown
+            - entity: button.poat_seedbox_rpi_restart_service_poat_seedbox_command
+              icon: mdi:restore-alert
+              name: restore
+      - type: conditional
+        conditions:
+          - entity: binary_sensor.poat_plex_local
+            state: "on"
+        row:
+          entity: device_tracker.pi_plex
+          type: custom:multiple-entity-row
+          name: poat-plex
+          icon: mdi:plex
+          show_state: false
+          secondary_info:
+            attribute: ip
+          entities:
+            - entity: sensor.plex_server_last_backup
+              name: backup
+            - entity: button.rpi_poat_plex_rpi_reboot_poat_plex_command
+              icon: mdi:restart
+              name: restart
+            - entity: button.rpi_poat_plex_rpi_shutdown_poat_plex_command
+              icon: mdi:power
+              name: shutdown
+            - entity: button.rpi_poat_plex_rpi_restart_service_poat_plex_command
+              icon: mdi:restore-alert
+              name: restore
       - entity: device_tracker.homeassistant
         type: custom:multiple-entity-row
         name: homeassistant
@@ -221,6 +245,9 @@ cards:
             icon: mdi:restore-alert
             name: restore
 
+  #################
+  # PRINTER
+  #################
   - type: conditional
     conditions:
       - condition: state
@@ -261,85 +288,103 @@ cards:
     template: card_title
     label: Raspberries - Sensors
 
-  - type: horizontal-stack
-    cards:
-      - type: "custom:rpi-monitor-card"
-        entity: sensor.rpi_poat_hole_rpi_monitor_poat_hole
-        card_style: full
-        name_prefix: ""
-      - type: "custom:rpi-monitor-card"
-        entity: sensor.rpi_poat_share_rpi_monitor_poat_share
-        card_style: full
-        name_prefix: ""
-  - type: horizontal-stack
-    cards:
-      - type: conditional
-        conditions:
-          - condition: state
-            entity: sensor.rpi_poat_seedbox_rpi_monitor_poat_seedbox
-            state_not: "unavailable"
-        card:
-          type: "custom:rpi-monitor-card"
-          entity: sensor.rpi_poat_seedbox_rpi_monitor_poat_seedbox
-          card_style: full
-          name_prefix: ""
-          card_mod:
-            style: |
-              ha-card {
-                background: 
-                  {% if is_state('sensor.seedbox_vpn_on', 'False') %}
-                    rgba(var(--color-background-red),var(--opacity-bg))
-                  {% endif %}
-              }
-      - type: conditional
-        conditions:
-          - condition: state
-            entity: sensor.rpi_poat_plex_rpi_monitor_poat_plex
-            state_not: "unavailable"
-        card:
-          type: "custom:rpi-monitor-card"
-          entity: sensor.rpi_poat_plex_rpi_monitor_poat_plex
-          card_style: full
-          name_prefix: ""
+  - type: custom:decluttering-card
+    template: pi_details
+    variables:
+      - pi_name: homeassistant
+      - icon: mdi:home-assistant
+      - name: Home Assistant
+      - tracker: homeassistant
+
+  - type: custom:decluttering-card
+    template: pi_details
+    variables:
+      - pi_name: hole
+      - icon: mdi:pi-hole
+      - name: Pi Hole
+      - tracker: poat_hole
+  
+  - type: custom:decluttering-card
+    template: pi_details
+    variables:
+      - pi_name: share
+      - icon: mdi:folder-network-outline
+      - name: Pi Share
+      - tracker: poat_share
+
+  - type: conditional
+    conditions:
+      - condition: state
+        entity: sensor.rpi_poat_seedbox_rpi_monitor_poat_seedbox
+        state_not: "unavailable"
+    card:
+      type: custom:decluttering-card
+      template: pi_details
+      variables:
+        - pi_name: seedbox
+        - icon: mdi:seed
+        - name: Pi Seedbox
+        - tracker: pi_seedbox
+    
+  - type: conditional
+    conditions:
+      - condition: state
+        entity: sensor.rpi_poat_plex_rpi_monitor_poat_plex
+        state_not: "unavailable"
+    card:
+      type: custom:decluttering-card
+      template: pi_details
+      variables:
+        - pi_name: plex
+        - icon: mdi:plex
+        - name: Pi Plex
+        - tracker: pi_plex
 
   #################
   # PLEX
   #################
-  - type: "custom:button-card"
-    template: card_title
-    label: Plex Controls
+  - type: conditional
+    conditions:
+      - condition: state
+        entity: binary_sensor.poat_plex_local
+        state: "on"
+    card:
+      type: vertical-stack
+      cards:
+        - type: "custom:button-card"
+          template: card_title
+          label: Plex Controls
+        - type: entities
+          entities:
+            - entity: sensor.poat_pi
+              type: custom:multiple-entity-row
+              name: Pi Plex
+              icon: mdi:plex
+              show_state: true
+              card_mod:
+                style:
+                  hui-generic-entity-row: |
+                    .entities-row {
+                      width: 100%;
+                    }
+              entities:
+                - entity: update.plex_media_server_poat_pi
+                  name: Version
+                - entity: button.poat_pi_scan_clients
+                  icon: mdi:skull-scan-outline
+                  name: scan
 
-  - type: entities
-    entities:
-      - entity: sensor.poat_pi
-        type: custom:multiple-entity-row
-        name: Pi Plex
-        icon: mdi:plex
-        show_state: true
-        card_mod:
-          style:
-            hui-generic-entity-row: |
-              .entities-row {
-                width: 100%;
-              }
-        entities:
-          - entity: update.plex_media_server_poat_pi
-            name: Version
-          - entity: button.poat_pi_scan_clients
-            icon: mdi:skull-scan-outline
-            name: scan
-
-      - type: custom:plex-meets-homeassistant
-        protocol: http
-        playTrailer: true
-        showExtras: true
-        showSearch: true
-        ip: poat-plex.local
-        token: !secret plex_token
-        port: '32400'
-        libraryName: Watch Next
-        entity:
-          - media_player.fire_tv_192_168_68_115
+            - type: custom:plex-meets-homeassistant
+              protocol: http
+              playTrailer: true
+              showExtras: true
+              showSearch: true
+              ip: poat-plex.local
+              token: !secret plex_token
+              port: '32400'
+              libraryName: Watch Next
+              entity:
+                - media_player.fire_tv_192_168_68_115
 
   #################
   # DEVICE HEALTH
